force-app/main/default/objects/AVSFQB__Invoices__c/AVSFQB__Invoices__c.object-meta.xml
<CustomObject>
    <label>Receivable</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Receivables</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>