force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Balance__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Balance__c</fullName>
    <formula>IF( AVSFQB__Payments__c &lt; 0, AVSFQB__Total_Invoice_Amount__c + AVSFQB__Payments__c, AVSFQB__Total_Invoice_Amount__c - AVSFQB__Payments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>