force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Days_Outstanding__c</fullName>
    <description>Days Since Invoiced</description>
    <formula>IF( AVSFQB__Balance__c &lt;=0,0,
TODAY() - DATE(YEAR(AVSFQB__TxnDate__c),MONTH(AVSFQB__TxnDate__c),DAY(AVSFQB__TxnDate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>