force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Invoice_Detail__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Invoice_Detail__c</fullName>
    <description>Invoice Detail</description>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>