force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <label>Doc Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>