force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>