force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Payments__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Payments__c</fullName>
    <description>Total Payments</description>
    <label>Payments</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>