force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__PriceBook_Name__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__PriceBook_Name__c</fullName>
    <label>PriceBook Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>