force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Sync_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Sync Date</label>
    <type>DateTime</type>
</CustomField>