force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Sync_To_Opp__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Sync_To_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync To Opp</label>
    <type>Checkbox</type>
</CustomField>