force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Total_Invoice_Amount__c</fullName>
    <description>Total Invoice Amount</description>
    <label>Total Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>