force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__TxnDate__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__TxnDate__c</fullName>
    <description>Due Date of the invoice</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>