force-app/main/default/objects/AVSFQB__Invoices__c/fields/AVSFQB__Type__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
                <default>true</default>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>SalesOrder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>