force-app/main/default/objects/AVSFQB__Invoices__c/listViews/AVSFQB__Modified_today.listView-meta.xml
<ListView>
    <fullName>AVSFQB__Modified_today</fullName>
    <columns>NAME</columns>
    <columns>AVSFQB__Invoice_Number__c</columns>
    <columns>AVSFQB__Opportunity__c</columns>
    <columns>AVSFQB__Balance__c</columns>
    <columns>AVSFQB__Sync_Date__c</columns>
    <columns>AVSFQB__Total_Invoice_Amount__c</columns>
    <columns>AVSFQB__Payments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Modified today</label>
</ListView>